--- a/2021-1/apunte/Cap.05.tex
+++ b/2021-1/apunte/Cap.05.tex
@@ -1045,8 +1045,7 @@ forman un conjunto de $n-1$ aristas distintas en $G$.
 \item \label{T3} $|E|=|V|-1$.
 \end{enumerate}
 \end{teorema}
-\begin{proof}
-    \
+\begin{proof} Vamos a probar  \ref{T1} $\Rightarrow$ \ref{T2} $\Rightarrow$ \ref{T4} $\Rightarrow$ \ref{T1},  lo cual prueba las equivalencias entre \ref{T1}, \ref{T2}, \ref{T4}. También probaremos que \ref{T2} $\Leftrightarrow$ \ref{T3}, lo cual prueba la equivalencia entre todas las afirmaciones. 
     
 \noindent \ref{T1} $\Rightarrow$ \ref{T2}. Puesto que $T$ es conexo, existe un
 camino de $x$ a $y$, digamos
