Cambio de fechas y formato

--- a/2022-1/apunte/main.tex
+++ b/2022-1/apunte/main.tex
@@ -145,7 +145,7 @@
 %%%=======================
 %%%=======================
 %%% CAP6 =================
-    %\input{Cap.06.tex}
+    \input{Cap.06.tex}
 %%%=======================
 \appendix
 \part{Ap\'endices} 
