--- a/2022-1/practicos/Practico2.tex
+++ b/2022-1/practicos/Practico2.tex
@@ -72,20 +72,20 @@
     
 
 
-{\bf \begin{center} \large  Práctico 2 \\ Matemática Discreta I -- Año 2021/1 \\ FAMAF \end{center}}
+{\bf \begin{center} \large  Práctico 2 \\ Matemática Discreta I -- Año 2022/1 \\ FAMAF \end{center}}
 
 
 \begin {enumerate}
 \setlength\itemsep{1.1em}
 
 \item La cantidad de dígitos o cifras de un número se cuenta a partir del primer dígito distinto de cero. Por ejemplo, $0035010$ es un número de $5$ dígitos.
-\begin{enumerate}
-\item ¿Cuántos números de 5 dígitos hay?
-\item ¿Cuántos números pares de 5 dígitos  hay?
-\item ¿Cuántos números de 5 dígitos existen con sólo un 3?
-\item ¿Cuántos números capicúas de 5 dígitos existen?
-\item ¿Cuántos números capicúas de a lo sumo 5 dígitos hay?
-\end{enumerate}
+    \begin{enumerate}
+        \item ¿Cuántos números de 5 dígitos hay?
+        \item ¿Cuántos números pares de 5 dígitos  hay?
+        \item ¿Cuántos números de 5 dígitos existen con sólo un 3?
+        \item ¿Cuántos números capicúas de 5 dígitos existen?
+        \item ¿Cuántos números capicúas de a lo sumo 5 dígitos hay?
+    \end{enumerate}
 
 
 \item ¿Cuántos números impares de cuatro cifras hay?
@@ -95,23 +95,21 @@
 
 
 \item En los boletos viejos de ómnibus, aparecía un {\em número} de 5 cifras (en este caso podían empezar con 0), y uno tenía un {\it boleto capicúa} si el número lo era.
-\begin{enumerate}
-\item ¿Cuántos boletos capicúas había?
-\item ¿Cuántos boletos había en los cuales no hubiera ningún dígito repetido?
-\end{enumerate}
+    \begin{enumerate}
+        \item ¿Cuántos boletos capicúas había?
+        \item ¿Cuántos boletos había en los cuales no hubiera ningún dígito repetido?
+    \end{enumerate}
 
 
 \item Las antiguas patentes de auto tenían una letra indicativa de la provincia y luego 6 dígitos. (En algunas provincias, Bs. As. y Capital, tenían 7 dígitos, pero ignoremos eso por el momento). Luego  vinieron patentes que tienen 3 letras y luego 3 dígitos. Finalmente, ahora las patentes tienen 2 letras, luego 3 dígitos y a continuación dos letras más ¿Cuántas patentes pueden hacerse con cada uno de los sistemas?
 
 
 \item Si uno tiene 8 CD distintos de Rock, 7 CD distintos de música clásica y 5 CD distintos de cuartetos,
-\begin{enumerate}
-    \item ¿Cuántas formas distintas hay de seleccionar un CD?
-
-    \item ¿Cuántas formas hay de seleccionar tres CD, uno de cada tipo?
-
-    \item Un sonidista en una fiesta de casamientos planea poner 3 CD, uno a continuación de otro. ¿Cuántas formas distintas tiene de hacerlo si le han dicho que no mezcle más de dos estilos?
-\end{enumerate}
+    \begin{enumerate}
+        \item ¿Cuántas formas distintas hay de seleccionar un CD?
+        \item ¿Cuántas formas hay de seleccionar tres CD, uno de cada tipo?
+        \item Un sonidista en una fiesta de casamientos planea poner 3 CD, uno a continuación de otro. ¿Cuántas formas distintas tiene de hacerlo si le han dicho que no mezcle más de dos estilos?
+    \end{enumerate}
 
 
 \item Mostrar que si uno arroja un dado $n$ veces y suma todos los resultados obtenidos, hay $\dfrac{6^n}{2}$ formas distintas de obtener una suma par.
@@ -130,15 +128,12 @@
 
 
 \item ¿De cuántas formas puede formarse un comité de 5 personas tomadas de un grupo de 11 personas entre las cuales hay 4 profesores y 7 estudiantes, si:
-\begin{enumerate}
-    \item No hay restricciones en la selección?
-
-    \item El comité debe tener exactamente 2 profesores?
-
-    \item El comité debe tener al menos 3 profesores?
-
-    \item El profesor $X$ y el estudiante $Y$ no pueden estar juntos en el comité?
-\end{enumerate}
+    \begin{enumerate}
+        \item No hay restricciones en la selección?
+        \item El comité debe tener exactamente 2 profesores?
+        \item El comité debe tener al menos 3 profesores?
+        \item El profesor $X$ y el estudiante $Y$ no pueden estar juntos en el comité?
+    \end{enumerate}
 
 
 \item Si en un torneo de fútbol participan $2n$ equipos, probar que el número total de opciones posibles para la primera fecha es $1\cdot 3\cdot 5 \cdots (2n - 1)$. sugerencia: use un argumento por inducción. 
@@ -150,18 +145,19 @@
 \item ¿De cuántas maneras  distintas pueden sentarse 8 personas en una mesa circular?
 
 
-\item \begin{enumerate}
-    \item ¿De cuántas maneras distintas pueden sentarse 6 hombres y 6 mujeres en una mesa circular si nunca deben quedar dos mujeres juntas?
-    \item \'Idem, pero con 10 hombres y 7 mujeres.
-\end{enumerate}
+\item 
+    \begin{enumerate}
+        \item ¿De cuántas maneras distintas pueden sentarse 6 hombres y 6 mujeres en una mesa circular si nunca deben quedar dos mujeres juntas?
+        \item Ídem, pero con 10 hombres y 7 mujeres.
+    \end{enumerate}
 
 
 \item 
-\begin{enumerate}
-    \item  ¿De cuántas formas distintas pueden ordenarse las letras de la palabra MATEMATICA
-    \item \'Idem con las palabras ALGEBRA, GEOMETRIA.
-    \item ¿De cuántas formas distintas pueden ordenarse las letras de la palabra MATEMATICA si se pide que las consonantes y las vocales se alternen?
-\end{enumerate}
+    \begin{enumerate}
+        \item  ¿De cuántas formas distintas pueden ordenarse las letras de la palabra MATEMATICA
+        \item Ídem con las palabras ALGEBRA, GEOMETRIA.
+        \item ¿De cuántas formas distintas pueden ordenarse las letras de la palabra MATEMATICA si se pide que las consonantes y las vocales se alternen?
+    \end{enumerate}
 
 
 \item ¿Cuántos números de 6 cifras pueden formarse con los dígitos de $112200$?
@@ -170,30 +166,30 @@
 
 
 \item Dados $m$, $n$ y $k$ naturales tales que $m \le k \le n$, probar que se verifica
-\begin{equation*}
-    \binom{n}{k}\binom{k}{m} = \binom{n}{m}\binom{n-m}{k-m}.
-\end{equation*}
+    \begin{equation*}
+        \binom{n}{k}\binom{k}{m} = \binom{n}{m}\binom{n-m}{k-m}.
+    \end{equation*}
 
 
 
 \item Probar que para todo $i$, $j$, $k \in {\mathbb N}_0$ vale
-\begin{equation*}
-    \binom{i + j + k}{i}\binom{j+k}{j} = \frac{(i+j+k)!}{i!j!k!}
-\end{equation*}
+    \begin{equation*}
+        \binom{i + j + k}{i}\binom{j+k}{j} = \frac{(i+j+k)!}{i!j!k!}
+    \end{equation*}
 
 
 \item Demostrar que para todo $n \in \mathbb N$ vale:
-\begin{enumerate}
-  \item $\displaystyle{\binom{n}{0} + \binom{n}{1} + \cdots + \binom{n}{n} = 2^n}$.
-\medskip
-  \item $\displaystyle{\binom{n}{0} - \binom{n}{1} + \cdots + (-1)^n\binom{n}{n} = 0}$
-  \end{enumerate}
+    \begin{enumerate}
+        \item $\displaystyle{\binom{n}{0} + \binom{n}{1} + \cdots + \binom{n}{n} = 2^n}$.
+        \medskip
+        \item $\displaystyle{\binom{n}{0} - \binom{n}{1} + \cdots + (-1)^n\binom{n}{n} = 0}$
+    \end{enumerate}
 
 
 \item Probar que para todo natural $n$ vale que 
-\begin{equation*}
-    \binom{2n}{2} = 2 \binom{n}{2} + n^2.
-\end{equation*}
+    \begin{equation*}
+        \binom{2n}{2} = 2 \binom{n}{2} + n^2.
+    \end{equation*}
 
 \end{enumerate}
 
@@ -203,30 +199,22 @@
 
 \begin{enumerate}[resume]
 
-\item Con $20$ socios de un club se desea formar $5$ listas electorales (disjuntas).
-Cada lista consta de $1$ Presidente, $1$ Tesorero y $2$ vocales.  ¿De cuántas
+\item Con $20$ socios de un club se desea formar $5$ listas electorales (disjuntas). Cada lista consta de $1$ Presidente, $1$ Tesorero y $2$ vocales.  ¿De cuántas
 formas puede hacerse?
 
 
-\item ¿De cuántas formas se pueden fotografiar $7$ matrimonios en una hilera,
-de tal forma que cada hombre aparezca al lado de su esposa?
+\item ¿De cuántas formas se pueden fotografiar $7$ matrimonios en una hilera, de tal forma que cada hombre aparezca al lado de su esposa?
 
 
-\item ¿De cuántas formas pueden distribuirse $14$ libros distintos entre dos
-personas de manera tal que cada persona reciba al menos $3$ libros?
+\item ¿De cuántas formas pueden distribuirse $14$ libros distintos entre dos personas de manera tal que cada persona reciba al menos $3$ libros?
 
-\item Cecilia ha olvidado la contraseña de su correo electrónico, la cual est\'a formada por $11$ caracteres: $4$ d\'igitos y $7$ letras todos mezclados. ?`Cu\'al es el m\'aximo n\'umero de intentos que deber\'ia probar para entrar a su correo si:
-\begin{enumerate}
-    \item  tiene en cuenta que hay 26 letras?
-    
-    \item la letra B y el d\'igito 2 no pueden estar ambos en la contraseña?
-    
-    \item  recuerda que ha formado la clave de la siguiente manera: los primeros siete caracteres son una mezcla de las letras de su nombre (CECILIA), y los \'ultimos cuatro caracteres son una permutaci\'on de las cuatro cifras de su a\~no de nacimiento (1998)?
-\end{enumerate}
+\item Cecilia ha olvidado la contraseña de su correo electrónico, la cual está formada por $11$ caracteres: $4$ dígitos y $7$ letras todos mezclados. ¿Cuál es el máximo número de intentos que debería probar para entrar a su correo si:
+    \begin{enumerate}
+        \item  tiene en cuenta que hay 26 letras?
+        \item la letra B y el dígito 2 no pueden estar ambos en la contraseña?
+        \item  recuerda que ha formado la clave de la siguiente manera: los primeros siete caracteres son una mezcla de las letras de su nombre (CECILIA), y los últimos cuatro caracteres son una permutación de las cuatro cifras de su año de nacimiento (1998)?
+    \end{enumerate}
 
-%\item Se está arreglando la plaza principal de la ciudad. Leandro, el jardinero, ha calculado que
-%necesita $6$ plantines para cada cantero rectangular. Él dispone de $4$ clases de plantines y quiere
-%que en cada cantero haya, como mínimo, dos clases de plantines diferentes. ¿De cuántas maneras puede seleccionar %los plantines a colocar en cada cantero? 
 
 \end{enumerate}
 \end{document}
