--- a/2022-1/practicos/Practico5-soluciones.tex
+++ b/2022-1/practicos/Practico5-soluciones.tex
@@ -75,7 +75,7 @@
     \baselineskip=0.55truecm %original
     
     
-    {\bf \begin{center} Práctico 5 \\ Matemática Discreta I -- Año 2021/1 \\ FAMAF \end{center}}
+    {\bf \begin{center} Práctico 5 \\ Matemática Discreta I -- Año 2022/1 \\ FAMAF \end{center}}
     
     {\bf \begin{center} Ejercicios resueltos \end{center}}
     
@@ -972,26 +972,26 @@
         \begin{tikzpicture}[scale=1]
         \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
         
-        \draw (-0.8,0) node {(a)};
+        \draw (-0.8,0) node {(1)};
         \Vertex[x=0,y=0]{A}
         \Vertex[x=0,y=-1]{B}
         \Edges(A,B)
         
         
-        \draw (1.2,0) node {(b)};
+        \draw (1.2,0) node {(2)};
         \Vertex[x=2,y=0]{A}
         \Vertex[x=3,y=-0.5]{B}
         \Vertex[x=2,y=-1]{C}
         \Edges(A,B,C,A)
         
-        \draw (4.2,0) node {(b)};
+        \draw (4.2,0) node {(3)};
         \Vertex[x=5,y=0]{A}
         \Vertex[x=6.5,y=0]{B}
         \Vertex[x=6.5,y=-1.5]{C}
         \Vertex[x=5,y=-1.5]{D}
         \Edges(A,B,C,D,A,C)
         
-        \draw (7.2,0) node {(b)};
+        \draw (7.2,0) node {(4)};
         \Vertex[x=8,y=-1]{A}
         \Vertex[x=9.5,y=0]{B}
         \Vertex[x=11,y=0]{C}
@@ -1010,23 +1010,23 @@
         \begin{tikzpicture}[scale=1]
         \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
         
-        \draw (-0.8,0) node {(a)};
+        \draw (-0.8,0) node {(1)};
         \Vertex[x=0,y=0]{A}
         \Vertex[x=0,y=-1]{B}
         
-        \draw (1.2,0) node {(b)};
+        \draw (1.2,0) node {(2)};
         \Vertex[x=2,y=0]{A}
         \Vertex[x=3,y=-0.5]{B}
         \Vertex[x=2,y=-1]{C}
         
-        \draw (4.2,0) node {(b)};
+        \draw (4.2,0) node {(3)};
         \Vertex[x=5,y=0]{A}
         \Vertex[x=6.5,y=0]{B}
         \Vertex[x=6.5,y=-1.5]{C}
         \Vertex[x=5,y=-1.5]{D}
         \Edges(B,D)
         
-        \draw (7.2,0) node {(b)};
+        \draw (7.2,0) node {(4)};
         \Vertex[x=8,y=-1]{A}
         \Vertex[x=9.5,y=0]{B}
         \Vertex[x=11,y=0]{C}
