--- a/2022-1/beamer/C01_md1.tex
+++ b/2022-1/beamer/C01_md1.tex
@@ -99,7 +99,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[16/03/2020]{15 de marzo  de 2022}
+\date[15/03/2022]{15 de marzo  de 2022}
 
 
 
@@ -198,7 +198,7 @@
     \item \label{axioma-i4} {\em Existencia de elemento neutro.}\, Existen números $0$, $1 \in \mathbb Z$ con $0\not=1$ tal que $a+0=a$;\qquad $a\cdot 1=a$. \pause
     \end{enumerate}
 
-    Los axiomas anteriores involucran a la suma y el producto por separado. 
+    Los axiomas anteriores involucran a la suma y al producto por separado. 
 
 
     
