--- a/2022-1/beamer/C02_md1.tex
+++ b/2022-1/beamer/C02_md1.tex
@@ -1,5 +1,5 @@
-%\documentclass{beamer} 
-\documentclass[handout]{beamer} % sin pausas
+\documentclass{beamer} 
+%\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
 
 
@@ -102,7 +102,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[18/03/2020]{18 de marzo  de 2021}
+\date[17/03/2022]{17 de marzo  de 2022}
 
 
 
