--- a/2022-1/beamer/C04_md1.tex
+++ b/2022-1/beamer/C04_md1.tex
@@ -1,8 +1,7 @@
-%\documentclass{beamer} 
-\documentclass[handout]{beamer} % sin pausas
+\documentclass{beamer} 
+%\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
-
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -101,7 +100,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[25/03/2021]{25 de marzo   de 2021}
+\date[29/03/2022]{29 de marzo   de 2022}
 
 
 
