--- a/2022-1/beamer/C13_md1.tex
+++ b/2022-1/beamer/C13_md1.tex
@@ -101,7 +101,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[29/04/2021]{29 de abril  de 2021}
+\date[03/05/2022]{3 de mayo  de 2022}
 
 \newcommand{\mcd}{\operatorname{mcd}}
 \newcommand{\mcm}{\operatorname{mcm}}
