--- a/2022-1/beamer/C20_md1.tex
+++ b/2022-1/beamer/C20_md1.tex
@@ -100,7 +100,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[01/06/2021]{1º de junio de 2021}
+\date[02/06/2022]{2 de junio de 2022}
 
 
 
